# transparency

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  device-monitor-desktop.md  transparency.sln
.claude/: settings.local.json
.github/workflows/: build-windows.yml  deploy-web.yml
.jules/: bolt.md  palette.md  sentinel.md
device-monitor-desktop/: cloud-mock.js  main.js  main.test.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  scanner.js  scanner.test.js
device-monitor-desktop/.npm-cache/_cacache/tmp/: 063978c9  14bca867  1e7b961c  2a402841  32ebbac3  43fe6dd1  51a4a2c6  5fe814fc  64a32338  675b61f4  69cce033  73d7a439  7e34354c  834dc47f  84559275  8f37af82  8f37e705  8fbe3569  93e5cec0  9d67acf8  a4001e44  b36bf136  be3adf9b  bf407137  c08f1ceb  cfed9363  cff7454f  d3ec1835  de8d0250  e2f44583  eee2c067  f357f67b  f48e7357
device-monitor-desktop/native/: CMakeLists.txt
device-monitor-desktop/native/src/: alertmanager.cpp  alertmanager.h  alertspage.cpp  alertspage.h  devicemodel.cpp  devicemodel.h  devicespage.cpp  devicespage.h  main.cpp  mainwindow.cpp  mainwindow.h  networkscanner.cpp  networkscanner.h  overviewpage.cpp  overviewpage.h  toolspage.cpp  toolspage.h
device-monitor-desktop/src/: index.html  renderer.js  styles.css
device-monitor-desktop/tests/: checkInternetConnectivity.test.js  loadJSON.test.js  main.test.js  scanner.test.js
releases/: REASSEMBLE.md
releases/v3.4.0/: Device Monitor Desktop-2.1.0.AppImage  Device Monitor Desktop-3.4.0.AppImage  transparency
releases/v4.4.0/: transparency
transparency-cpp/: CMakeLists.txt
transparency-cpp/include/transparency/: models.h  platform.h
transparency-cpp/src/: FirebaseClient.cpp  FirebaseClient.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  Models.h  Monitor.cpp  Monitor.h  Resource.h  Scanner.cpp  Scanner.h  ScannerTest.cpp  Scanner_test.cpp  TabAlerts.cpp  TabAlerts.h  TabDevices.cpp  TabDevices.h  TabLedger.cpp  TabLedger.h  TabOverview.cpp  TabOverview.h  TabPrivacy.cpp  TabPrivacy.h  TabSmartHome.cpp  TabSmartHome.h  TabTools.cpp  TabTools.h  TestScannerAnomalies.cpp  Theme.h  main.cpp
transparency-cpp/src/core/: fingerprint.cpp  fingerprint.h  oui_data.h
transparency-cpp/src/net/: monitor.cpp  monitor.h  scan_engine.cpp  scan_engine.h
transparency-cpp/src/ui/: ui_theme.h
transparency-cpp/src/ui/win32/: main.cpp  main_window.h  tab_alerts.h  tab_devices.h  tab_ledger.h  tab_overview.h  tab_privacy.h  tab_smarthome.h  tab_tools.h  win32_theme.h
transparency-cpp/src/utils/: string_utils.h  time_utils.h
transparency-cpp/tests/: ScannerTest.cpp
transparency-data/: api-key.json
transparency-linux/: CMakeLists.txt
transparency-linux/src/: app.cpp  app.h  main.cpp  models.h  scanner.cpp  scanner.h
transparency-native/TransparencyApp/: App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  Services.cs  TransparencyApp.csproj
transparency-native/TransparencyApp.Tests/: CloudMockServiceTests.cs  NetworkScannerTests.cs  TransparencyApp.Tests.csproj
transparency-web/: .firebaserc  firestore.rules  package-lock.json  package.json
transparency-web/public/: index.html
transparency-web/public/css/: style.css
transparency-web/public/js/: auth.js  dashboard.js  firebase-config.js
